# PiLapse_Client

./: CHANGELOG.md  config.example.yaml  pyproject.toml  readme.md
profiles/: default.yaml
src/Configuration/: photo_config.py  pi_config.py  server.py  server_conifg.py
src/Core/: server_service.py
src/Models/: photo_model.py  pi_model.py
src/Utils/: file_processor.py  path.py
src/Utils/mielib/: custominput.py  option.py
systemd/: timelapse@.service
tests/: test_config.py  test_scheduler.py  test_state.py
timelapse/: __init__.py  __main__.py  cli.py
timelapse/capture/: camera.py  pipeline.py
timelapse/config/: loader.py  models.py  wizard.py
timelapse/disk/: guard.py
timelapse/scheduler/: scheduler.py  solar.py  state.py
timelapse/streaming/: hls.py  mjpeg.py  rtmp.py  webserver.py
timelapse/utils/: log.py  pi_detect.py  secrets.py
timelapse/video/: generator.py
